# libavg

./: CMakeLists.txt  TODO_CMAKE
cmake/: FindFFmpeg.cmake  FindGTK2.cmake  Findcairo.cmake
src/: CMakeLists.txt  avgconfig.h.in  version.h
src/anim/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/triangulate/: CMakeLists.txt
src/conradrelais/: CMakeLists.txt
src/graphics/: CMakeLists.txt
src/imaging/: CMakeLists.txt
src/lmfit/: CMakeLists.txt
src/oscpack/: CMakeLists.txt
src/player/: CMakeLists.txt
src/video/: CMakeLists.txt
src/wrapper/: CMakeLists.txt
