
INCLUDE(CheckIncludeFiles)
CHECK_INCLUDE_FILES (dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILES (inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES (libavcodec/vdpau.h HAVE_LIBAVCODEC_VDPAU_H)
CHECK_INCLUDE_FILES (libavformat/avformat.h HAVE_LIBAVFORMAT_AVFORMAT_H)
CHECK_INCLUDE_FILES (memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILES (stdint.h HAVE_STDINT_H)
CHECK_INCLUDE_FILES (stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILES (strings.h HAVE_STRINGS_H)
CHECK_INCLUDE_FILES (string.h HAVE_STRING_H)
CHECK_INCLUDE_FILES (sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES (sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES (unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES (vdpau/vdpau.h HAVE_VDPAU_VDPAU_H)
CHECK_INCLUDE_FILES (windows.h HAVE_WINDOWS_H)



CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/avgconfig.h.in ${CMAKE_CURRENT_SOURCE_DIR}/avgconfig.h)

ADD_SUBDIRECTORY(anim)
ADD_SUBDIRECTORY(audio)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(imaging)
ADD_SUBDIRECTORY(lmfit)
ADD_SUBDIRECTORY(oscpack)
ADD_SUBDIRECTORY(player)
#ADD_SUBDIRECTORY(python)
#ADD_SUBDIRECTORY(samples)
#ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(video)
ADD_SUBDIRECTORY(wrapper)

install(FILES avgrc avgconfigwrapper.h api.h avgconfig_win.h version.h DESTINATION include)
install(DIRECTORY glm/ glm/gtc glm/gtx glx/virtrev glm/core DESTINATION include
        PATTERN "**hpp"
        PATTERN "*.inl")
